--- a/Локации/Города/Гарды_Описание.md
+++ b/Локации/Города/Гарды_Описание.md
@@ -10,19 +10,19 @@
 - Приречье
 - Портовый
 
-Детинец - мощная крепость, выстроенная при Ольмере Первом, основателе династии Аэринов. За исключением последнего штурма, во время свержения Аэринов, крепость не подвергалась осаде. 
+**Детинец** - мощная крепость, выстроенная при Ольмере Первом, основателе династии Аэринов. За исключением последнего штурма, во время свержения Аэринов, крепость не подвергалась осаде. 
 
 Детинец - Сердце города. Здесь находятся [[Сенат]] и [[Курия магов]]. Воздух здесь строгий, наполненный тишиной власти и шелестом мантий чиновников. По мостовой гулко цокают копыта королевской стражи.
 
-Севернее Детинца находится Парковый Район -район тишины и зелени. Здесь селятся маги, учёные и художники. Вечерами слышна музыка и тихие споры о высоком. Впрочем, во время городских смут, нередких при Аэринах, жители района могли неплохо за себя постоять - наружные здания района представляют собой настоящую крепость.
+Севернее Детинца находится **Парковый Район** - район тишины и зелени. Здесь селятся маги, учёные и художники. Вечерами слышна музыка и тихие споры о высоком. Впрочем, во время городских смут, нередких при Аэринах, жители района могли неплохо за себя постоять - наружные здания района представляют собой настоящую крепость.
 
-К западу от Паркового района располагается Ипподром. Это не одно лишь конное ристалище, а целый комплекс зданий развлекательной и культурной направленности. В частности, здесь располагается Публичная библиотека кана Астера, огромное собрание немагической литературы, куда собраны произведения из самых разных стран мира.
+К западу от Паркового района располагается **Ипподром**. Это не одно лишь конное ристалище, а целый комплекс зданий развлекательной и культурной направленности. В частности, здесь располагается Публичная библиотека кана Астера, огромное собрание немагической литературы, куда собраны произведения из самых разных стран мира.
 
-Вообще весь район построен уже вилтами на месте сгоревшего при штурме квартала трущоб. Когда был решено, что город будет восстановлен, военные вожди вилтов, и прежде всего, сам Аэрин, вложили личные деньги в строительство, ибо казна Аэринов была почти пуста.
+Вообще весь район построен уже вилтами на месте сгоревшего при штурме квартала трущоб. Когда был решено, что город будет восстановлен, военные вожди вилтов, и прежде всего, сам Астер, вложили личные деньги в строительство, ибо казна Аэринов была почти пуста.
 
-К востоку от Паркового Района находится Приречье, спокойный жилой район. Здесь живут небогатые горожане, в основном ремесленники и торговцы. Запах свежего хлеба и стиранного белья. Жизнь течёт медленно и размеренно.
+К востоку от Паркового Района находится **Приречье**, спокойный жилой район. Здесь живут небогатые горожане, в основном ремесленники и торговцы. Запах свежего хлеба и стиранного белья. Жизнь течёт медленно и размеренно.
 
-Совсем иначе выглядит Торг, шумный, пахнущий пряностями, кожей и жареным мясом. Крики зазывал, звон монет, грохот телег. Здесь продаётся практически всё, что прибывает в порт. Некоторые торговцы даже живут прямо в лавках, на вторых или третьих этажах. «На Торге глаза да карман крепче держи!» — советуют бывалые.
+Совсем иначе выглядит **Торг**, шумный, пахнущий пряностями, кожей и жареным мясом. Крики зазывал, звон монет, грохот телег. Здесь продаётся практически всё, что прибывает в порт. Некоторые торговцы даже живут прямо в лавках, на вторых или третьих этажах. «На Торге глаза да карман крепче держи!» — советуют бывалые.
 
 Здесь же находятся постоялые дворы для приезжих. Гостиницы есть и в других районах, но сам существенно дороже.
 
