--- a/Магия/Религия/Путь_Света.md
+++ b/Магия/Религия/Путь_Света.md
@@ -19,7 +19,7 @@
  - Аустрон - заря, богиня весны
 - Аурендил - блистающий, утренняя звезда
 - Балдраз - ясный день, господин, воин - эпитет Савитара
-- фрауджа - богиня плодов, огородничества
+- Фрауджа - богиня плодов, огородничества
 - Вейдер-Тот - бог мудрости, знания. В древности Вейдер - бог тайных знаний, повелитель безумия, гадания, пророчеств, после слияния с южным Тотом - бог познания вообще
 - Сигель - богиня солнечного диска
 - Ярус, Тивас - бог весеннего плодородия, войны молодёжных союзов (разные племенные названия)
@@ -158,6 +158,13 @@
 - **"Фонарь странника"** - ритуальные светильники
 - **"Карта теней"** - ночная навигация
 - **"Песня маяка"** - заклинания-указатели
+
+
+#### Лето - богиня мать, богиня любви и плодородия
+#### Артис - дочь Лето, богиня - дева (не имеющая мужа), охотница
+
+
+
 
 ### **Обновлённые ритуальные практики**
 
@@ -338,3 +345,213 @@
 
 **Теги:**  
 #НаукаИВера #Гармония #КультТота #КультНивея #РелигияБезВойн
+
+
+# Путь Света
+
+> **Дата:** 19 августа 2025 г.  
+> **Тип:** религия  
+
+## Краткое описание  
+Путь Света – синтетический пантеон, объединяющий богов кельтских, германских и славянских народов с пришельцами‑вилтами. Изначально пантеон представлял собой равноправный набор богов без выделения «главных». Впоследствии в культуру вошли Свет (Савитар, Всерождающий) и Ночь (Никта, Всемать), которые получили особое место в иерархии.
+
+## Основы вероучения (догматы)
+
+- **«Боги дали человеку всё, что ему нужно»** – но не как дар, а как испытание.  
+  - Огонь добывают, землю возделывают, знания получают через труд.  
+  - Через испытание человек может подняться до уровня бога или упасть в животное состояние.  
+- **«Любопытство – молитва мудреца»** – почитание Вейдера‑Тота требует постоянного познания.  
+
+## Пантеон / Божества
+
+| Бог | Эпитеты | Основные сферы | Пример ритуала |
+|-----|---------|----------------|----------------|
+| **Алафадер (Савитар)** | Всерождающий, Всеотец | Земледелие, ремёсла, клятвы | *Огненная борозда* – первый вспаханный участок поля обводят священным огнём |
+| **Аустрон** | Заря, богиня весны | Юность, чистые помыслы, поэзия | *Роса на ресницах* – утренний обряд очищения |
+| **Аурендил** | Утренняя звезда | Мореплаватели, надежда | *Фонарь странника* – ритуальные светильники |
+| **Балдраз** | Ясный день, господин | Война, воинство | *Молотовая клятва* – присяга на наковальне |
+| **Фрауджа** | Богиня плодов | Садоводы, домашний очаг | *Яблочное благословение* – освящение первого урожая |
+| **Вейдер‑Тот** | Мудрец, повелитель парадоксов | Знание, магия, технология | *Маска Истины* – ритуальное перевоплощение |
+| **Сигель** | Солнечный лик | Ясновидение, искусство | *Зеркальные гадания* – летние предсказания |
+| **Ярус / Тивас** | Бог весеннего плодородия | Молодёжные союзы, война | *Бег с факелами* – весенние состязания |
+| **Тундар** | Громовержец | Воинские братства, границы | *Громовая стража* – ночные дозоры в грозу |
+| **Лето** | Богиня‑мать | Любовь, плодородие | *Плетёный алтарь* – создание домашних святилищ |
+| **Артис** | Дочь Лето | Охота, девственность | *Супружеская лоза* – обряд соединения пар |
+
+### Духи
+
+- **Дисы** – духи природы.  
+- **Драугр** – призрак, живой мертвец.  
+- **Туриг** – духи, насылающие болезни.
+
+## Культовые практики
+
+### 1. Ардис – Владыка Времён и Судьбы
+
+| Аспект | Символика | Практика |
+|--------|-----------|----------|
+| Хранитель циклов | Песочные часы с разноцветным песком | *Колесо Времён* – ежегодный обряд в храме, жрецы предсказывают судьбы по движению теней |
+| Повелитель даров | Спираль, закрученная в восьмерку | *Пир Предков* – ритуальное застолье с пустой тарелкой для каждого умершего родственника |
+| Посредник живых и мёртвых | Кристаллический жезл | *Детское Посвящение* – определение магических склонностей через кристалл Ардиса |
+
+### 2. Савитар (Алафадер) – Всерождающий Свет
+
+| Ритуал | Описание |
+|--------|----------|
+| *Огненная борозда* | Первый вспаханный участок поля обводят священным огнём, символизируя дар огня. |
+| *Медное кольцо* | Обряд подтверждения деловых соглашений, где стороны обмениваются медными дисками. |
+| *Золотые руки* | Праздник мастеров, когда творения освящают солнечными лучами, а мастера получают благословение. |
+
+### 3. Никта – Всемать Тьмы
+
+| Ритуал | Описание |
+|--------|----------|
+| *Лунное молчание* | Ночное бдение в полнолуние, во время которого верующие молчат и слушают шёпот ветра. |
+| *Серебряная пуповина* | Обряд захоронения последователей, где на коленях кладут серебряный сосуд с водой. |
+| *Теневой плащ* | Инициация ведарей, где кандидат носит плащ, выкованный из тёмных нитей, и проходит через лабиринт теней. |
+
+### 4. Тундар – Громовержец
+
+| Ритуал | Описание |
+|--------|----------|
+| *Молотовая клятва* | Присяга на наковальне, где воин клянётся защищать границы. |
+| *Громовая стража* | Ночные дозоры в грозу, во время которых воинские отцы раздают молнии. |
+| *Искрящийся эль* | Ритуальное пиво с добавлением кремня, символизирующее энергию молнии. |
+
+### 5. Вейдер‑Тот – Двуликий Мудрец
+
+| Ритуал | Описание |
+|--------|----------|
+| *Маска Истины* | Ритуальное перевоплощение, где жрец надевает маску, символизирующую двойственность. |
+| *Чернильные сны* | Практика пророческих видений, где жрец пишет сны на чернильных листах. |
+| *Книга Трещин* | Запись предсказаний на глиняных табличках, которые хранятся в храме. |
+
+### 6. Фрауджа – Богиня Плодородия
+
+| Ритуал | Описание |
+|--------|----------|
+| *Яблочное благословение* | Освящение первого урожая, где жрецы бросают яблоки в огонь. |
+| *Плетёный алтарь* | Создание домашних святилищ из лозы, символизирующее связь с землей. |
+| *Супружеская лоза* | Обряд соединения пар, где пары связывают руки лозой. |
+
+### 7. Аустрон – Утренняя Заря
+
+| Ритуал | Описание |
+|--------|----------|
+| *Роса на ресницах* | Утренний обряд очищения, где верующие обливают лицо росой. |
+| *Песня жаворонка* | Музыкальные состязания, где участники поют песни о рассвете. |
+| *Первая борозда* | Инициация юношей, где они делают первую борозду в земле. |
+
+### 8. Ярус/Тивас – Бог Весеннего Плодородия
+
+| Ритуал | Описание |
+|--------|----------|
+| *Бег с факелами* | Весенние состязания, где участники бегут с факелами. |
+| *Зелёный брак* | Ритуальные помолвки, где пары обмениваются зелёными лентами. |
+| *Посох странствий* | Обряд совершеннолетия, где молодые люди получают посохи. |
+
+### 9. Сигель – Солнечный Лик
+
+| Ритуал | Описание |
+|--------|----------|
+| *Зеркальные гадания* | Летние предсказания, где жрецы используют зеркала. |
+| *Золотые нити* | Вышивальные обряды, где нити символизируют солнечные лучи. |
+| *Слепое рисование* | Мистические практики, где художники рисуют, закрыв глаза. |
+
+### 10. Аурендил – Утренняя Звезда
+
+| Ритуал | Описание |
+|--------|----------|
+| *Фонарь странника* | Ритуальные светильники, которые моряки носят в ночи. |
+| *Карта теней* | Ночная навигация, где моряки рисуют карты теней. |
+| *Песня маяка* | Заклинания‑указатели, которые звучат от маяков. |
+
+## Обновлённые ритуальные практики
+
+### Жертва (совместная трапеза)
+
+| Обязательное блюдо | Символика |
+|---------------------|-----------|
+| Хлеб с оттиском солнечного символа | Священный огонь |
+| Мёд в глиняных чашах | Сладость жизни |
+| Солёная рыба (дар моря) | Вода и море |
+| Сыр (дар земли) | Земля и плодородие |
+| Сидр (дар садов) | Сад и урожай |
+
+### Священные места
+
+- Камни с «чашечными» отметинами – символы жертвоприношения.  
+- Перекрёстки трёх дорог – место, где сходятся судьбы.  
+- Источники с чистой водой – источник жизни.  
+- Деревья с двойными стволами – символ двойственности божественного.
+
+### Духовенство
+
+| Класс | Одежда | Символ |
+|-------|--------|--------|
+| Солнечные жрецы (Савитар) | Медные диски | Знак огня |
+| Лунные ведари (Никта) | Серебряные нити | Знак ночи |
+| Громовые отцы (Тундар) | Наручи с тремя молниями | Знак грома |
+| Мастера Времени (Ардис) | Песочные часы на шее | Знак времени |
+
+## Священные места и артефакты
+
+| Место | Описание |
+|-------|----------|
+| **Дуб Алафадера** в Королевском лесу | Под ним закапывают пуповины новорождённых, символизируя связь с землей. |
+| **Пещера Вейдера** | Здесь исчезают звуки, создавая идеальные условия для молитв. |
+| **Наковальня Тундара** | Исторический объект, где гномы ковали первое железо. |
+| **Зеркало Сигель** | Увеличивает солнечные зайчики до размеров костра, усиливая свет. |
+
+## Табу и ограничения
+
+- Огонь, используемый в ритуалах, должен быть добыт собственными усилиями.  
+- Любая попытка использовать чужой дар без согласия жреца считается нарушением.  
+- Нельзя приносить в жертву живое существо без предварительного согласования с духовенством.  
+
+## Праздники и календарь
+
+| Дата | Праздник | Бог | Традиции |
+|------|----------|-----|----------|
+| 21 марта | Ярусова ночь | Ярус/Тивас | Состязания, помолвки |
+| 1 мая | День Фрауджи | Фрауджа | Освящение садов |
+| 21 июня | Высокий день Ардиса | Ардис | Детские посвящения |
+| 1 августа | Огни Сигель | Сигель | Гадания, художественные ярмарки |
+| 21 сентября | Тень Никты | Никта | Ночные бдения |
+| 1 ноября | День предков | Ардис | Пир с умершими |
+| 21 декабря | Зимнепраздник | Савитар/Никта | Возжигание священного огня |
+
+## Символы
+
+- **Солнцеворот** (крест в круге) – символ Савитара.  
+- **Лунная сеть** (паутина) – символ Никты.  
+- **Три молнии** – символ Тундара.  
+
+## Отношения с другими религиями/фракциями
+
+- **Гномы** почитают подземные аспекты Никты, считая её хранительницей тайн подземелья.  
+- **Эльдари** видят Вейдера‑Тота как своего покровителя, ведь он соединяет магию и технологию.  
+- **Вилты** считают Савитара верховным богом, а Никту – богиней ночи.  
+
+## Таймлайн
+
+- **2000 лет назад** – слияние культа Вейдера и Тота, образовавшее единую систему знаний.  
+- **500 лет назад** – появление Света и Ночи как центральных богов.  
+- **100 лет назад** – установление храма Савитара в Гардах, где закреплены основные ритуалы.  
+
+## Философские принципы: наука и религия
+
+- **Наука** изучает материальный мир, **религия** – духовный и божественный.  
+- **Ограничения науки**: она не объясняет чудеса, пророчества и посмертное бытие.  
+- **Роль жрецов**: они исследуют природу, но признают, что не всё познаваемо.  
+- **Культ Тота‑Вейдера** сочетает алхимию, медицину и богословие, создавая «Книгу непознанного» для записей необъяснимых явлений.  
+
+## Современные практики
+
+- **Храм Тота + Университет**: студенты изучают анатомию и божественные откровения, а «Запретный архив» хранит книги с необъяснимыми явлениями.  
+- **Медицинский центр**: лечит травами, скальпелями и заклинаниями, объединяя науку и веру.  
+- **Прибрежные города**: рыбаки используют компасы, но перед выходом бросают монету в море, а торговцы освящают корабли у жрецов.  
+
+## Вывод
+
+Наука объясняет измеряемое, религия отвечает на то, что выше понимания. Жрецы и ученые работают вместе, а не воюют, создавая гармонию познания и веры.
