--- a/Организации/Лига_птицеловов.md
+++ b/Организации/Лига_птицеловов.md
@@ -4,31 +4,118 @@
 
 # Лига птицеловов
 
+**Дата основания:** IV век до Республики (около 1987 лет назад) 
+**Текущий год:** 1487 год Республики 
+**Тип:** Братство (закрытая, трансграничная организация с мистическими традициями)
 
+## **Описание**
 
-> Дата: 2025-09-06
-> Тип: Организация (Братство)
+Лига птицеловов — древнее и закрытое братство, специализирующееся на ловле птиц для **весеннего Праздника освобождения**, который отмечается во всех странах западной части континента. В древности птицеловство было доступным ремеслом, но со временем превратилось в искусство, требующее не только мастерства, но и посвящения.
 
-## Описание
-Объединение людей, занимающихся ловлей птиц для праздника освобождения
+Во времена династии **Аэринов** (узурпаторов, известных своей жестокостью) птицеловство стало привилегией аристократии, а умение ловить редких птиц — знаком высокого статуса. После падения Аэринов и установления Республики аристократические привилегии были упразднены, но традиция Праздника освобождения осталась. Лига птицеловов возродилась как **тайная, трансграничная организация**, объединяющая мастеров своего дела независимо от происхождения.
 
-## Структура
-### Лидеры
-[[Эрген Рикот]], [[Барма Законник]]
+В Празднике освобождения особо почитаются аспекты [[Путь_Света#Лето - богиня мать, богиня любви и плодородия|Лето]] и [[Путь_Света#Артис - дочь Лето, богиня - дева (не имеющая мужа), охотница|Артис]]
 
-### Известные члены
+## **Структура**
 
+### **Лидеры**
 
-## Цели
+- **Эрген Рикот** — легендарный птицелов, хранитель древних знаний и ритуалов. Его авторитет непререкаем среди членов Лиги.
+- **Барма Законник** — организатор и хранитель традиций, отвечает за соблюдение строгих правил Лиги и связи с внешним миром.
 
+### **Членство**
 
-## Особенности
+- **Строгий отбор:** Чтобы стать членом Лиги, нужно не только владеть искусством птицеловства, но и пройти испытания, доказывающие лояльность и мастерство.
+- **Трансграничность:** Лига не признаёт государственных границ — её члены есть во всех странах западного континента, что делает организацию похожей на орден масонов.
+- **Тайные собрания:** Вступление сопровождается ритуалами, а собрания проходят в укромных местах — лесах, горных ущельях или старых поместьях.
 
+---
 
-## Связи
-- Локации: 
-- События: 
-- Артефакты: 
+## **Цели**
 
+1. **Сохранение традиций Праздника освобождения** — обеспечение птицами для ритуалов, посвящённых **Лето** (богине любви и плодородия) и **Артис** (богине-охотнице).
+2. **Контроль знаний:** Секреты птицеловства передаются только посвящённым, чтобы избежать профанации.
+3. **Мистическая легитимность:** Лига окружена легендами — говорят, что её основатели получили знания от самих богов.
+4. **Независимость от властей:** Чиновники и аристократы, мечтающие вступить в Лигу, сталкиваются с недоверием — здесь ценят только реальное мастерство, а не титулы.
+
+---
+
+## **Особенности**
+
+- **Мистическая аура:** Лига окружена тайнами — существуют легенды о проклятиях, магических ловушках и божественном покровительстве.
+- **Тайные ритуалы:** Новые члены проходят посвящение, включающее клятвы, испытания и символические обряды.
+- **Символика:** В атрибутике Лиги часто встречаются изображения **Артис** (богини-охотницы) и **Лето**, а также древние символы, понятные только посвящённым.
+- **Конфликт с властями:** Чиновники и аристократы пытаются проникнуть в Лигу, но их попытки обычно заканчиваются неудачей — здесь не терпят карьеристов.
+
+---
+
+### **Связи**
+
+#### **Локации**
+
+- **Заповедные леса и горы** — места обитания редких птиц, где проводятся тайные охоты.
+- **Старые поместья и руины** — используются для собраний и хранения артефактов.
+
+#### **События**
+
+- **Праздник освобождения** — главное событие, для которого Лига обеспечивает птиц.
+- **Тайные турниры** — соревнования между мастерами, где определяются лучшие птицеловы.
+
+#### **Артефакты**
+
+- **Древние ловушки и сетки** — передаются из поколения в поколение как реликвии.
+- **Перья редких птиц** — используются в ритуалах и как символы статуса.
+
+---
+
+### **Теги**
+
+#организация #активный #мистика #трансграничность #закрытое_братство
+
+---
+
+**Вопрос для обсуждения:** Как вы представляете себе ритуалы посвящения в Лигу? Или, возможно, вас интересует, как Лига взаимодействует с местными властями, учитывая её трансграничность и независимость?
 ## Теги
 #организация #активный
+
+[[Лига птицеловов - вариант]]
+> [!ai]+ AI
+>
+> ```markdown
+> # Лига птицеловов
+> **Дата основания**: 2025-09-06
+> **Тип**: Организация (Братство)
+> **Статус**: Активная
+> ### Описание
+> Элитное объединение, специализирующееся на ритуальной ловле птиц для **Праздника Освобождения**. Изначально было народным промыслом, но из-за сложности и временных затрат превратилось в привилегию аристократии. После падения династии Аэринов и установления Республики временно утратило влияние, но возродилось как необходимость для проведения ключевого обряда. Тесно связано с культами богинь [[Путь_Света#Лето - богиня мать, богиня любви и плодородия|Лето]] и [[Путь_Света#Артис - дочь Лето, богиня - дева (не имеющая мужа), охотница|Артис]].
+> ---
+> **Цели**:
+> - Обеспечение ритуальными птицами главного праздника Республики.
+> - Сохранение древних техник ловли и подготовки пернатых.
+> - Восстановление социального статуса организации в новом политическом строе.
+> **Особенности**:
+> - 🪶 **Элитарность**: Доступ к обучению имеют лишь посвящённые; методы охраняются как государственная тайна.
+> - ⚖️ **Двойственность**: Сочетает религиозные традиции с политическим влиянием.
+> - 🕊️ **Сезонность**: Пик активности — за месяц до Праздника Освобождения (подготовка птиц).
+> - ⚠️ **Критика**: Некоторые считают практики жестокими, требуя замены искусственными атрибутами.
+> ---
+> ### Структура
+> **Лидеры**:
+> - [[Эрген Рикот]] — Глава ордена, потомственный птицелов.
+> - [[Барма Законник]] — Связующий с Республиканским советом.
+> **Известные члены**:
+> (добавьте персонажей через `[[Имя Фамилия]]`)
+> ---
+> ### Связи
+> **Локации**:
+> - Ритуальные охотничьи угодья в [[Леса_Артис]].
+> - Штаб-квартира: [[Башня_Крылатых]] в столице.
+> **События**:
+> - Участвует в организации [[Праздник_Освобождения]].
+> - Конфликтует с [[Гильдией_звероловов]] из-за квот на отлов.
+> **Артефакты**:
+> - [[Сети_Лета]] — легендарные невесомые сети для ловли.
+> - [[Свисток_Призыва]] — инструмент, имитирующий голоса редких птиц.
+> ---
+> **Теги**: #организация #активный #ритуалы #аристократия #культ_Артис
+> ```
