--- a/1_Рукопись/Произведения/Тонущий_мир/Главы/Глава_001_В_затопленном_городе/Глава_001-В_затопленном_городе.md
+++ b/1_Рукопись/Произведения/Тонущий_мир/Главы/Глава_001_В_затопленном_городе/Глава_001-В_затопленном_городе.md
@@ -21,9 +21,9 @@ locations: ["Рюэн"]
 # Глава 001: В затопленном городе
 
 ## Сюжетные линии
-- **[[Сюжетные_линии#Тема1 - Учёба|Учёба]]** (прямая): Выбор: учёба или звание
-- **[[Сюжетные_линии#Тема5 - Дружба с Атаульфом|Дружба с Атаульфом]]** (прямая): Знакомство
-- **[[Сюжетные_линии#Тема4 - Красная болезнь|Красная болезнь]]** (фоновая): Упоминание о смерти родителей
+- **[[1_Пробный/Орис Дарт ар Лютвидж/1_Рукопись/Произведения/орис/Сюжетные_линии#Тема1 - Учёба|Учёба]]** (прямая): Выбор: учёба или звание
+- **[[1_Пробный/Орис Дарт ар Лютвидж/1_Рукопись/Произведения/орис/Сюжетные_линии#Тема5 - Дружба с Атаульфом|Дружба с Атаульфом]]** (прямая): Знакомство
+- **[[1_Пробный/Орис Дарт ар Лютвидж/1_Рукопись/Произведения/орис/Сюжетные_линии#Тема4 - Красная болезнь|Красная болезнь]]** (фоновая): Упоминание о смерти родителей
 
 ## Персонажи
 [[Киррольф]], [[Атаульф|Атаульф]], Жрец
