--- a/1_Рукопись/Произведения/Тонущий_мир/Главы/Глава_001_В_затопленном_городе/Сцена_03_Возвращение_домой.md
+++ b/1_Рукопись/Произведения/Тонущий_мир/Главы/Глава_001_В_затопленном_городе/Сцена_03_Возвращение_домой.md
@@ -7,7 +7,7 @@ created: "2025-08-05"
 ---
 
 # Сцена_03: Возвращение домой
-- **[[Сюжетные_линии#Тема1 - Учёба|Учёба]]** (прямая): Обоснование учёбы
+- **[[1_Пробный/Орис Дарт ар Лютвидж/1_Рукопись/Произведения/орис/Сюжетные_линии#Тема1 - Учёба|Учёба]]** (прямая): Обоснование учёбы
  
 
 Когда хор закончился, мальчишки тихо выбрались из школы. На улице уже пахло свежим хлебом и цветами с рынка. [[Киррольф]] и [[Атаульф|Атаульф]] шли по солнечной мостовой, обсуждая услышанное.
