--- a/1_Рукопись/Произведения/Тонущий_мир/Главы/Глава_001_В_затопленном_городе/Сцена_04_Материнская_ночь.md
+++ b/1_Рукопись/Произведения/Тонущий_мир/Главы/Глава_001_В_затопленном_городе/Сцена_04_Материнская_ночь.md
@@ -5,8 +5,8 @@ chapter_num: "001"
 sce_num: "04"
 created: "2025-08-05"
 ---
-- **[[Сюжетные_линии#Тема1 - Учёба|Учёба]]** (связанная): ночь перед испытанием 
-- **[[Сюжетные_линии#Тема7 - Становление героя|Становление героя]]** (прямая): переживания
+- **[[1_Пробный/Орис Дарт ар Лютвидж/1_Рукопись/Произведения/орис/Сюжетные_линии#Тема1 - Учёба|Учёба]]** (связанная): ночь перед испытанием 
+- **[[1_Пробный/Орис Дарт ар Лютвидж/1_Рукопись/Произведения/орис/Сюжетные_линии#Тема7 - Становление героя|Становление героя]]** (прямая): переживания
  
  
 # Сцена_04: Материнская ночь
