Обновление проекта "Тонущий мир": изменены названия и метаданные в таблице, обновлены описания народов, добавлены новые детали о культуре и религии, улучшена структура документации, удалены устаревшие файлы.

--- a/Монстры/Болотный_медведь.md
+++ b/Монстры/Болотный_медведь.md
@@ -248,7 +248,7 @@ WHERE (
 ## Связи
 - **Места обитания:** Заболоченные территории [[Велюградия]], [[Краковей|Краковея]] и [[Порусия|Порусии]]    
 - **Связанные события:**  
-  *При подсыхании болот медведи начали мигрировать к реке Порусь, напададая на рыбацкие лодки. В 1485 Э.Р. отряд из 10 зверов разграбил склад соли в Любенбурге.*  
+  *При подсыхании болот медведи начали мигрировать к реке Порусь, нападая на рыбацкие лодки. В 1485 Э.Р. отряд из 10 зверей разграбил склад соли в Любенбурге.*  
 
 ---
 
