--- a/Названия.md
+++ b/Названия.md
@@ -1,18 +1,18 @@
-﻿---
+---
 created: 2025-07-31 04:22:29
 ---
 Вот таблица с названиями в стиле, вдохновленном как древнегерманской, так и древнеславянской мифологией:
 
-| Древнеславянский | Древнегерманский | Цвергский  |
-| ---------------- | ---------------- | ---------- |
-| ~~Велюградия~~   | Эльденмарк       | Велюмарк   |
-| Моровия          | Хронгардия       | Морнград   |
-| Зоревия          | Вальдхольм       | Зорнхольм  |
-| Любомирск        | Торнландия       | Люборн     |
-| Сварожья Земля   | Фростинген       | Сварнбург  |
-| Древоград        | Громмбург        | Древнбург  |
-| Березиния        | Айнхерьяр        | Березинген |
-| Вислания         | Вулфенланд       | Вислбург   |
-| Краковей         | Химмельсберг     | Кракохольм |
-| Полянск          | Дракенфельд      | Полянфельд |
+| Древнеславянский | Древнегерманский | Цвергский    |
+| ---------------- | ---------------- | ------------ |
+| ~~Велюградия~~   | Эльденмарк       | ~~Велюмарк~~ |
+| Моровия          | Хронгардия       | ~~Морнград~~ |
+| Зоревия          | Вальдхольм       | Зорнхольм    |
+| Любомирск        | Торнландия       | Люборн       |
+| Сварожья Земля   | Фростинген       | Сварнбург    |
+| Древоград        | Громмбург        | Древнбург    |
+| Березиния        | Айнхерьяр        | Березинген   |
+| Вислания         | Вулфенланд       | Вислбург     |
+| Краковей         | Химмельсберг     | Кракохольм   |
+| Полянск          | Дракенфельд      | Полянфельд   |
 
