--- a/Народы/Вилты.md
+++ b/Народы/Вилты.md
@@ -19,7 +19,7 @@ image: ""
 **Религии:** Культ Света (Велор); в Аэрине — полноценный политеизм  
 
 ## Описание
-Вилты — народ степного происхождения, сформировавшийся в условиях кочевой мобильности и военной дисциплины. Великий Исход, вызванный многолетней засухой, привёл вилтов к разделению и созданию двух ключевых центров: северного Краковея и южного Аэрина (западнее Драконьих гор, хребет обойдён с юга). В текущую эпоху (1498 год от основания Республики) Краковей — сильное государство уровня Речи Посполитой; земли Аэрина стали ядром республиканских преобразований.
+Вилты — народ степного происхождения, сформировавшийся в условиях кочевой мобильности и военной дисциплины. Великий Исход, вызванный многолетней засухой, привёл вилтов к разделению и созданию двух ключевых центров: северного Краковея и южного Аэрона (западнее Драконьих гор, хребет обойдён с юга). В текущую эпоху (1498 год от основания Республики) Краковей — сильное государство уровня Речи Посполитой; земли Аэрона стали ядром республиканских преобразований.
 
 ## История
 - Происхождение: родоплеменные кочевники восточных степей.  
