--- a/Народы/Месы.md
+++ b/Народы/Месы.md
@@ -6,8 +6,8 @@ aliases:
 type: Человек
 homeland: Ютаборг
 population: "320000"
-language: Ютанский
-religion: Политеизм
+language: Гардарский
+religion: Путь_Света, 
 tags:
   - people
   - nation
@@ -22,7 +22,7 @@ image: Мои Проекты/Тонущий_мир/Теговые_картинк
 **Тип:** Человек  
 **Родина:** [[Ютаборг]]  
 **Численность:** 320000  
-**Язык:** Ютанский  
+**Язык:** Гардарский 
 **Религия:** [[Политеизм]]  
 
 ## Описание
