--- a/Народы/Эльдари.md
+++ b/Народы/Эльдари.md
@@ -14,7 +14,7 @@ image: ""
 
 **Тип:** Человек  
 **Родина:** [[Северные леса]]  
-**Язык:** Эльдарский  
+**Язык:** Эльдарис 
 **Религия:** Друидизм, Культ Леса  
 Другое название Ютары
 ## Описание
