--- a/Справочник/Религии/Путь_Света/Боги/Ардис.md
+++ b/Справочник/Религии/Путь_Света/Боги/Ардис.md
@@ -80,6 +80,7 @@ image: ""
 6.  **Переходы и Изменения:** Покровитель любых значимых переходов в жизни человека (не только рождение/смерть, но и инициации, смена статуса).
 
 ## Праздники и календарь
+* **Высокий день Ардиса** (21 жарника): день когда дети, достигшие 11 лет проходят испытание на владение магией и связь со зверями.
 *   **Закат Года / День Предков (Зимнее Солнцестояние):** Самый важный праздник. День поминовения усопших, подношений им, ритуалов защиты могил от нежити и Некромагов в самую длинную ночь. Символ побеждающегося света (солнцестояние) и надежды на новый цикл.
 *   **Первый Всход / Праздник Пробуждения (Весеннее Равноденствие):** Отмечает возрождение жизни, надежду на новый цикл процветания. Благословение новорожденных и посевов. Ритуалы, посвященные аспекту рождения.
 *   **Жатва Памяти (Осеннее Равноденствие):** Подготовка к зиме и "умиранию" природы. Благодарность за урожай, поминовение недавно усопших. Ритуалы укрепления границы между мирами перед наступлением темного времени.
