--- a/Справочник/Религии/Путь_Света/Путь_Света.md
+++ b/Справочник/Религии/Путь_Света/Путь_Света.md
@@ -45,6 +45,17 @@ dv.span(links.join(", "));
 ## Ритуалы и праздники
 - Ритуалы: {{ritualsContent}}
 - Праздники и календарь: 
+
+| Дата          | Праздник            | Божество      | Традиции                        |
+| ------------- | ------------------- | ------------- | ------------------------------- |
+| 21 севеня     | Ярусова Ночь        | Ярус/Тивас    | Состязания, помолвки            |
+| 1 цветеня     | День Фрауджи        | Фрауджа       | Освящение садов                 |
+| 21 жарника    | Высокий День Ардиса | Ардис         | Детские посвящения              |
+| 1 ягодника    | Огни Сигель         | Сигель        | Гадания, художественные ярмарки |
+| 21 листопада  | Тень Никты          | Никта         | Ночные бдения                   |
+| 1 морозника   | День Предков        | Ардис         | Пир с умершими                  |
+| 21 снежника   | Зимнепраздник       | Савитар/Никта | Возжигание священного огня      |
+
 ### Месяцы (принесены вилтами)
 
 |№|Название|Григорианский аналог|Погодные явления|Важные даты|
